# spotless

./: .gitignore  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
spotless/: checks.py
spotless/tests/: test_doctest.py
