[metadata]
name = spotless
author = Julien Danjou
author-email = julien@danjou.info
summary = Python pedantic checks
description-file =
    README.rst
home-page = https://github.com/jd/spotless
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    spotless

[entry_points]
flake8.extension =
    S001 = spotless.checks:StaticmethodChecker
    S002 = spotless.checks:StaticmethodChecker

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source


[pbr]
warnerrors = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
